--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 pycodestyle==2.8.0
+PyMySQL==1.0.2
 six==1.16.0
 SQLAlchemy==1.4.25
 toml==0.10.2
