--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 autopep8==1.5.7
+cffi==1.15.0
 click==8.0.3
 colorama==0.4.4
+cryptography==35.0.0
 Flask==2.0.2
 Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.5.1
@@ -9,6 +11,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 pycodestyle==2.8.0
+pycparser==2.21
 PyJWT==2.2.0
 PyMySQL==1.0.2
 six==1.16.0
